manifests/11-test-gvisor-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: whoa
spec:
  template:
    spec:
      containers:
      - image: nfontes/whoa:latest
